--- a/apps/goosepond/static/css/therapy.css
+++ b/apps/goosepond/static/css/therapy.css
@@ -1,7 +1,17 @@
 html {
     background-image: linear-gradient(120deg, #533219, #694615, #775a32); 
     min-height: 100%;
+    
+    /* hide scrollbar but allow scrolling */
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
 }
+
+html::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 
 .office {
     width: 100%;
